# cpack

./: CMakeLists.txt  Info.plist  build_package.sh  start.sh
cmake/arch/: linux.cmake  macos.cmake  windows.cmake
cmake/cpack/: linux.cmake  macos.cmake
lib64/include/: myLib.h
lib64/src/: myLib.cpp
src/: main.cpp
